# Lunarko

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: default.json  settings.json  translate.json
resources/: app.qrc
src/: Config.cpp  Config.hpp  Editor.cpp  Editor.hpp  Translate.cpp  Translate.hpp  Window.cpp  Window.hpp  app.cpp  app.hpp  main.cpp
src/Menubar/: File.cpp  File.hpp  Menubar.cpp  Menubar.hpp  View.cpp  View.hpp
test/: icon.cpp
